native/include/luaujava.h

LUA_API void* luaW_newuserdatadtor(lua_State* L, size_t sz, void (*dtor)(void*));
// lua_setfenv

// luau_load
// lua_call is unused
// lua_pcall
// lua_cpcall is unused

LUA_API int luaW_yield(lua_State* L, int nresults); // TODO: this only throws if there is a c boundary on the stack. We can check this with isyieldable from java and handle this error there.
LUA_API int luaW_break(lua_State* L); // TODO: this only throws if there is a c boundary on the stack. We can check this with isyieldable from java and handle this error there.
// lua_resume
// TODO: resumeerror might cause a longjmp unexpectedly on another thread? no idea need to investigate.
// lua_resumeerror
// lua_status
// lua_isyieldable
// lua_getthreaddata
// lua_setthreaddata
// lua_costatus

// lua_gc
// lua_setmemcat
// lua_totalbytes

// lua_error is unused (handled on java side)
LUA_API int luaW_next(lua_State* L, int idx);
// lua_rawiter;
LUA_API void luaW_concat(lua_State* L, int n);
// lua_encodepointer is unused
// lua_clock is unused

// lua_setuserdatatag
// lua_setuserdatadtor
// lua_getuserdatadtor
// lua_setuserdatametatable
// lua_getuserdatametatable
LUA_API void luaW_setlightuserdataname(lua_State* L, int tag, const char* name);
// lua_getlightuserdataname

LUA_API void luaW_clonefunction(lua_State* L, int idx);
LUA_API void luaW_cleartable(lua_State* L, int idx);
LUA_API void luaW_clonetable(lua_State* L, int idx);