src/generated/java/net/hollowcube/luau/internal/vm/luawrap_h.java


    /**
     * {@snippet lang=c :
     * extern int luaW_yield(lua_State *L, int nresults)
     * }
     */
    public static int luaW_yield(MemorySegment L, int nresults) {
        var mh$ = luaW_yield.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_yield", L, nresults);
            }
            return (int)mh$.invokeExact(L, nresults);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_break {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_break");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaW_break(lua_State *L)
     * }
     */
    public static FunctionDescriptor luaW_break$descriptor() {
        return luaW_break.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaW_break(lua_State *L)
     * }
     */
    public static MethodHandle luaW_break$handle() {
        return luaW_break.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaW_break(lua_State *L)
     * }
     */
    public static MemorySegment luaW_break$address() {
        return luaW_break.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int luaW_break(lua_State *L)
     * }
     */
    public static int luaW_break(MemorySegment L) {
        var mh$ = luaW_break.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_break", L);
            }
            return (int)mh$.invokeExact(L);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_next {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_next");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaW_next(lua_State *L, int idx)
     * }
     */
    public static FunctionDescriptor luaW_next$descriptor() {
        return luaW_next.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaW_next(lua_State *L, int idx)
     * }
     */
    public static MethodHandle luaW_next$handle() {
        return luaW_next.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaW_next(lua_State *L, int idx)
     * }
     */
    public static MemorySegment luaW_next$address() {
        return luaW_next.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int luaW_next(lua_State *L, int idx)
     * }
     */
    public static int luaW_next(MemorySegment L, int idx) {
        var mh$ = luaW_next.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_next", L, idx);
            }
            return (int)mh$.invokeExact(L, idx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_concat {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_concat");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_concat(lua_State *L, int n)
     * }
     */
    public static FunctionDescriptor luaW_concat$descriptor() {
        return luaW_concat.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_concat(lua_State *L, int n)
     * }
     */
    public static MethodHandle luaW_concat$handle() {
        return luaW_concat.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_concat(lua_State *L, int n)
     * }
     */
    public static MemorySegment luaW_concat$address() {
        return luaW_concat.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_concat(lua_State *L, int n)
     * }
     */
    public static void luaW_concat(MemorySegment L, int n) {
        var mh$ = luaW_concat.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_concat", L, n);
            }
            mh$.invokeExact(L, n);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_setlightuserdataname {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_setlightuserdataname");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_setlightuserdataname(lua_State *L, int tag, const char *name)
     * }
     */
    public static FunctionDescriptor luaW_setlightuserdataname$descriptor() {
        return luaW_setlightuserdataname.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_setlightuserdataname(lua_State *L, int tag, const char *name)
     * }
     */
    public static MethodHandle luaW_setlightuserdataname$handle() {
        return luaW_setlightuserdataname.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_setlightuserdataname(lua_State *L, int tag, const char *name)
     * }
     */
    public static MemorySegment luaW_setlightuserdataname$address() {
        return luaW_setlightuserdataname.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_setlightuserdataname(lua_State *L, int tag, const char *name)
     * }
     */
    public static void luaW_setlightuserdataname(MemorySegment L, int tag, MemorySegment name) {
        var mh$ = luaW_setlightuserdataname.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_setlightuserdataname", L, tag, name);
            }
            mh$.invokeExact(L, tag, name);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_clonefunction {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_clonefunction");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_clonefunction(lua_State *L, int idx)
     * }
     */
    public static FunctionDescriptor luaW_clonefunction$descriptor() {
        return luaW_clonefunction.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_clonefunction(lua_State *L, int idx)
     * }
     */
    public static MethodHandle luaW_clonefunction$handle() {
        return luaW_clonefunction.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_clonefunction(lua_State *L, int idx)
     * }
     */
    public static MemorySegment luaW_clonefunction$address() {
        return luaW_clonefunction.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_clonefunction(lua_State *L, int idx)
     * }
     */
    public static void luaW_clonefunction(MemorySegment L, int idx) {
        var mh$ = luaW_clonefunction.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_clonefunction", L, idx);
            }
            mh$.invokeExact(L, idx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_cleartable {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_cleartable");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_cleartable(lua_State *L, int idx)
     * }
     */
    public static FunctionDescriptor luaW_cleartable$descriptor() {
        return luaW_cleartable.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_cleartable(lua_State *L, int idx)
     * }
     */
    public static MethodHandle luaW_cleartable$handle() {
        return luaW_cleartable.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_cleartable(lua_State *L, int idx)
     * }
     */
    public static MemorySegment luaW_cleartable$address() {
        return luaW_cleartable.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_cleartable(lua_State *L, int idx)
     * }
     */
    public static void luaW_cleartable(MemorySegment L, int idx) {
        var mh$ = luaW_cleartable.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_cleartable", L, idx);
            }
            mh$.invokeExact(L, idx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_clonetable {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_clonetable");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_clonetable(lua_State *L, int idx)
     * }
     */
    public static FunctionDescriptor luaW_clonetable$descriptor() {
        return luaW_clonetable.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_clonetable(lua_State *L, int idx)
     * }
     */
    public static MethodHandle luaW_clonetable$handle() {
        return luaW_clonetable.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_clonetable(lua_State *L, int idx)
     * }
     */
    public static MemorySegment luaW_clonetable$address() {
        return luaW_clonetable.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_clonetable(lua_State *L, int idx)
     * }
     */
    public static void luaW_clonetable(MemorySegment L, int idx) {
        var mh$ = luaW_clonetable.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_clonetable", L, idx);
            }
            mh$.invokeExact(L, idx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
